# MapMetricsAnalysis

./: README.md  machine.py  pyproject.toml  submit_job.py
Data/: Rochester.csv
Data/All/: 1 Nice July 2020.csv  2 Oslo August 2020.csv  3 Hartford September 2020.csv  3 Oslo September 2020.csv  4 Hartford October 2020.csv  5 Hartford November 2020.csv  5 Nice November 2020.csv  6 Nice December 2020.csv  6 Oslo December 2020.csv  7 Oslo January 2021.csv
Data/Marseille/: 1 Marseille July TTM202007.csv  3 Marseille September TTM202009.csv
Data/Old/: August TomTom.csv
Data/Old/All/: 1 Oslo July 2020.csv  2 Nice August 2020.csv  3 Nice September 2020.csv  4 Nice October 2020.csv  4 Oslo October 2020.csv  7 Nice January 2021.csv
Data/Old/Connecticut/: 1 Hartford July 2020.csv  2 Hartford August 2020.csv  6 Hartford December 2020.csv  7 Hartford January 2021.csv
Data/Old/Marseille/: 2 Marseille August TTM202008.csv  4 Marseille October TTM202010.csv  5 Marseille November TTM202011.csv  6 Marseille December TTM202012.csv  7 Marseille January TTM202101.csv
Data/Old/Oslo/: 5 Oslo November 2020.csv
Data/Old/Rochester/: 1 Rochester July 2020.csv  2 Rochester August 2020.csv  3 Rochester September 2020.csv  4 Rochester November 2020.csv  5 Rochester December 2020.csv
Data/Rochester/: 6 Rochester January 2020.csv
Data/Updated/Athens/: statistics_application_1611954189080_0501_TTM202101.csv  statistics_application_1611954189080_0502_TTM202007.csv
Data/Updated/Brazil/: statistics_application_1611954189080_0538_TTM202101.csv  (+1 more)
(+60 files in other folders)
