[tool.poetry]
name = "mapmetricsanalysis"
version = "0.1.0"
description = "Stats App for MapMetrics"
authors = ["Jameson Toper <jameson.toper@tomtom.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pandas = "^1.2.2"
matplotlib = "^3.3.4"
numpy = "^1.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
